# farmasync-agent

AgenteConGeminiApi/: .env  TODO.md  api.py  client_mcp.py  main.py  pyproject.toml  schema.sql  server_mcp.py
UI/: admin.html  admin.js  admin_debug.js  cliente.html  cliente.js  script.js  styles.css
bd/: farmasync_producto.product.json  venta.sql
